add can2uart test

--- a/can4disco.cabal
+++ b/can4disco.cabal
@@ -16,6 +16,7 @@ library
   exposed-modules:     C4D.Platforms
                        C4D.Tests.CANSendRecv
                        C4D.Tests.CANLoop
+                       C4D.Tests.CAN2UART
 
 --                       BSP.Tests.UART.Types,
 --                       BSP.Tests.UART.Buffer,
@@ -54,6 +55,22 @@ executable cansendrecv-test-gen
 
 executable canloop-test-gen
   main-is:             CANLoopTest.hs
+  hs-source-dirs:      test
+  build-depends:       base >= 4.6,
+                       ivory,
+                       ivory-stdlib,
+                       ivory-backend-c,
+                       ivory-hw,
+                       tower          >= 0.9,
+                       tower-config,
+                       tower-freertos-stm32,
+                       ivory-bsp-stm32,
+                       ivory-bsp-tests,
+                       can4disco
+  ghc-options:          -Wall
+
+executable can2uart-test-gen
+  main-is:             CAN2UART.hs
   hs-source-dirs:      test
   build-depends:       base >= 4.6,
                        ivory,
