make SLCAN standalone, add SLCANLoopback

--- a/can4disco.cabal
+++ b/can4disco.cabal
@@ -18,10 +18,7 @@ library
                        C4D.Tests.CANLoop
                        C4D.Tests.CAN2UART
                        C4D.Tests.SLCAN
-
---                       BSP.Tests.UART.Types,
---                       BSP.Tests.UART.Buffer,
---                       BSP.Tests.UART.TestApp,
+                       C4D.Tests.SLCANLoopback
 
   build-depends:       base >= 4.6,
                        monadLib,
@@ -88,6 +85,22 @@ executable can2uart-test-gen
 
 executable slcan-test-gen
   main-is:             SLCAN.hs
+  hs-source-dirs:      test
+  build-depends:       base >= 4.6,
+                       ivory,
+                       ivory-stdlib,
+                       ivory-backend-c,
+                       ivory-hw,
+                       tower          >= 0.9,
+                       tower-config,
+                       tower-freertos-stm32,
+                       ivory-bsp-stm32,
+                       ivory-bsp-tests,
+                       can4disco
+  ghc-options:          -Wall
+
+executable slcan-loopback-test-gen
+  main-is:             SLCANLoopback.hs
   hs-source-dirs:      test
   build-depends:       base >= 4.6,
                        ivory,
