posix support for slcan

--- a/stack.yaml
+++ b/stack.yaml
@@ -33,6 +33,8 @@ packages:
     - tower-aadl
 - location: ../ivory-tower-base/
   extra-dep: true
+- location: ../ivory-tower-posix/
+  extra-dep: true
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps: []
