--- a/can4disco.cabal
+++ b/can4disco.cabal
@@ -117,3 +117,19 @@ executable slcan-loopback-test-gen
                        ivory-bsp-tests,
                        can4disco
   ghc-options:          -Wall
+
+executable slcan-posix-loopback-test-gen
+  main-is:             SLCANPosix.hs
+  hs-source-dirs:      test
+  build-depends:       base >= 4.6,
+                       ivory,
+                       ivory-stdlib,
+                       ivory-backend-c,
+                       ivory-hw,
+                       tower          >= 0.9,
+                       tower-config,
+                       tower-hal,
+                       ivory-tower-base,
+                       ivory-tower-posix,
+                       can4disco
+  ghc-options:          -Wall
