--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,7 @@
 # For more information, see: http://docs.haskellstack.org/en/stable/yaml_configuration.html
 
 # Specifies the GHC version and set of packages available (e.g., lts-3.5, nightly-2015-09-21, ghc-7.10.2)
-resolver: lts-8.9
+resolver: lts-9.1
 
 # Local packages, usually specified by relative directory name
 packages:
@@ -37,7 +37,9 @@ packages:
   extra-dep: true
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+- th-abstraction-0.2.5.0
+- monadLib-3.7.3
 
 # Override default flag values for local packages and extra-deps
 flags: {}
