--- a/can4disco.cabal
+++ b/can4disco.cabal
@@ -32,7 +32,7 @@ library
                        tower-hal,
                        tower-freertos-stm32 >= 0.9,
                        ivory-bsp-stm32,
-                       ivory-bsp-tests,
+                       ivory-tower-helloworld,
                        ivory-tower-base
 
   default-language:    Haskell2010
@@ -50,7 +50,6 @@ executable cansendrecv-test-gen
                        tower-config,
                        tower-freertos-stm32,
                        ivory-bsp-stm32,
-                       ivory-bsp-tests,
                        can4disco
   ghc-options:          -Wall
 
@@ -66,7 +65,6 @@ executable canloop-test-gen
                        tower-config,
                        tower-freertos-stm32,
                        ivory-bsp-stm32,
-                       ivory-bsp-tests,
                        can4disco
   ghc-options:          -Wall
 
@@ -82,7 +80,6 @@ executable can2uart-test-gen
                        tower-config,
                        tower-freertos-stm32,
                        ivory-bsp-stm32,
-                       ivory-bsp-tests,
                        can4disco
   ghc-options:          -Wall
 
@@ -98,7 +95,6 @@ executable slcan-test-gen
                        tower-config,
                        tower-freertos-stm32,
                        ivory-bsp-stm32,
-                       ivory-bsp-tests,
                        can4disco
   ghc-options:          -Wall
 
@@ -114,7 +110,6 @@ executable slcan-loopback-test-gen
                        tower-config,
                        tower-freertos-stm32,
                        ivory-bsp-stm32,
-                       ivory-bsp-tests,
                        can4disco
   ghc-options:          -Wall
 
