--- a/can4disco.cabal
+++ b/can4disco.cabal
@@ -1,13 +1,12 @@
-
 name:                can4disco
 version:             0.1.0.0
 synopsis:            can4disco firmware
--- description:
+description:         SLCAN bridge implementation and CAN Bus utilities
 license:             BSD3
 author:              Richard Marko
 maintainer:          srk@48.io
-copyright:           2017 Richard Marko
--- category:
+copyright:           2020 Richard Marko
+category:            Embedded
 build-type:          Simple
 cabal-version:       >=1.10
 
