--- a/can4disco.cabal
+++ b/can4disco.cabal
@@ -1,14 +1,14 @@
+cabal-version:       2.2
 name:                can4disco
 version:             0.1.0.0
 synopsis:            can4disco firmware
 description:         SLCAN bridge implementation and CAN Bus utilities
-license:             BSD3
-author:              Richard Marko
+license:             BSD-3-Clause
+author:              Sorki
 maintainer:          srk@48.io
-copyright:           2020 Richard Marko
+copyright:           2020 Sorki
 category:            Embedded
 build-type:          Simple
-cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
